--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
